--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -7,7 +7,7 @@ $font-accent: 'Domine', 'Times New Roman', serif;
 
 // Colors
 $color-blush: #edaef5;
-$color-midnight: #102436;
+$color-midnight: #111d27;
 $color-gilded: #efd39f;
 $color-silvered: #dee6ee;
 
@@ -31,3 +31,6 @@ $gradient-holographic: linear-gradient(
 );
 
 // Borders
+
+$border-radius-right-top: 0 4rem 0 4rem;
+$border-radius-left-top: 4rem 0 4rem 0;
