feat: a more refined font

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,9 +1,9 @@
 // Fonts
 /* stylelint-disable-next-line import-notation */
-@import url('https://fonts.googleapis.com/css2?family=Catamaran&family=Domine:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Catamaran&family=Lustria&display=swap');
 
 $font-primary: 'Catamaran', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$font-accent: 'Domine', 'Times New Roman', serif;
+$font-accent: 'Lustria', 'Times New Roman', serif;
 
 // Colors
 $color-blush: #edaef5;
