--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -6,10 +6,11 @@ $font-primary: 'Catamaran', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, san
 $font-accent: 'Lustria', 'Times New Roman', serif;
 
 // Colors
-$color-blush: #edaef5;
+$color-blush: #eda6c7;
 $color-midnight: #111d27;
 $color-gilded: #efd39f;
 $color-silvered: #dee6ee;
+
 
 $color-background: $color-midnight;
 $color-text-primary: $color-silvered;
