--- a/src/styles/_component.page-header.scss
+++ b/src/styles/_component.page-header.scss
@@ -88,6 +88,7 @@
     margin: 0;
     color: $color-text-accent;
     text-align: center;
+    width: 100%;
 
     @media (min-width: $bp-col-4-to-12) {
       font-size: 6rem;
