feat: animated hr element

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -6,7 +6,7 @@ $font-primary: 'Catamaran', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, san
 $font-accent: 'Lustria', 'Times New Roman', serif;
 
 // Colors
-$color-blush: #eda6c7;
+$color-blush: #e9c3d5;
 $color-midnight: #111d27;
 $color-gilded: #efd39f;
 $color-silvered: #dee6ee;
@@ -30,7 +30,6 @@ $gradient-holographic: linear-gradient(
 );
 
 // Borders
-
 $border-radius-right-top: 0 3rem 0 3rem;
 $border-radius-left-top: 3rem 0 3rem 0;
 
