--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -3,6 +3,7 @@
 
 // Components
 @import 'component.page';
+@import 'component.page-break';
 @import 'component.navigation';
 @import 'component.page-header';
 
