--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -1,9 +1,30 @@
+@use 'mixins';
+
 html {
   background-color: $color-background;
   color: $color-text-primary;
   font-family: $font-primary;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 h1 {
   font-family: $font-accent;
+}
+
+a {
+  @include mixins.custom-focus;
+
+  &:link,
+  &:visited {
+    text-decoration: none;
+    color: $color-text-primary;
+    font-family: $font-primary;
+  }
+
+  &:hover,
+  &:active {
+    color: $color-gilded;
+    text-decoration: un;
+  }
 }
