--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -10,9 +10,12 @@ $color-blush: #e9c3d5;
 $color-midnight: #111d27;
 $color-gilded: #efd39f;
 $color-silvered: #dee6ee;
+
 $color-background: $color-midnight;
 $color-text-primary: $color-silvered;
 $color-text-accent: $color-blush;
+$color-text-link-hover: $color-gilded;
+$color-focus: $color-gilded;
 
 // Gradients
 $gradient-holographic: linear-gradient(
