--- a/src/styles/_component.page.scss
+++ b/src/styles/_component.page.scss
@@ -1,5 +1,10 @@
 .page {
-  max-width: 85rem;
+  min-width: 12rem;
+  max-width: 84rem;
   margin: auto;
-  padding: 2rem;
+  padding: 0 2rem;
+
+  @media (min-width: $bp-col-4-to-12) {
+    padding: 0 4rem;
+  }
 }
