--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -4,6 +4,7 @@ html {
   background-color: $color-background;
   color: $color-text-primary;
   font-family: $font-primary;
+  scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
