--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -6,5 +6,6 @@
 @import 'component.page-break';
 @import 'component.navigation';
 @import 'component.page-header';
+@import 'component.social-links';
 
 // Utilities
