--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -7,7 +7,7 @@ $font-accent: 'Lustria', 'Times New Roman', serif;
 
 // Colors
 $color-blush: #e9c3d5;
-$color-midnight: #111d27;
+$color-midnight: #10181f;
 $color-gilded: #efd39f;
 $color-silvered: #dee6ee;
 $color-background: $color-midnight;
@@ -34,6 +34,7 @@ $gradient-holographic: linear-gradient(
 // Borders
 $border-radius-right-top: 0 3rem 0 3rem;
 $border-radius-left-top: 3rem 0 3rem 0;
+$border-radius-top: 15rem 15rem 0 0;
 
 // Breakpoints
 
