--- a/src/styles/_component.social-links.scss
+++ b/src/styles/_component.social-links.scss
@@ -21,6 +21,7 @@
       border-radius: $border-radius-top;
       display: block;
       grid-column: 1 / span 4;
+      margin-top: -2rem;
 
       img {
         display: block;
@@ -55,7 +56,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin: 1rem auto;
+    margin: 1.5rem auto;
     justify-content: space-between;
     align-items: center;
     line-height: 1;
@@ -75,6 +76,7 @@
     div {
       margin-top: 1.5rem;
       font-size: 1.25rem;
+      font-family: $font-accent;
 
       @media (min-width: $bp-links-go-inline) {
         margin-top: 0;
