feat: quick pass at an about page

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -6,6 +6,7 @@
 @import 'component.page-break';
 @import 'component.navigation';
 @import 'component.page-header';
+@import 'component.about';
 @import 'component.social-links';
 
 // Utilities
