fix: skinny border looks weird when I only used it twice

--- a/src/styles/_component.social-links.scss
+++ b/src/styles/_component.social-links.scss
@@ -16,7 +16,7 @@
     display: none;
 
     @media (min-width: $bp-col-4-to-12) {
-      @include mixins.holographic-border($border-size: 2px);
+      @include mixins.holographic-border;
 
       border-radius: $border-radius-top;
       display: block;
