feat: featured works

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -18,6 +18,14 @@ h6 {
   font-family: $font-accent;
 }
 
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+}
+
 a {
   @include mixins.custom-focus;
 
