--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -8,5 +8,6 @@
 @import 'component.page-header';
 @import 'component.about';
 @import 'component.social-links';
+@import 'component.featured-works';
 
 // Utilities
