feat: adjust font sizes and titles

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -24,6 +24,13 @@ h2 {
 
 h3 {
   font-size: 1.75rem;
+  margin-bottom: 0.5rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+  margin-top: 0;
+  font-family: $font-primary;
 }
 
 a {
