--- a/src/styles/_component.featured-works.scss
+++ b/src/styles/_component.featured-works.scss
@@ -102,3 +102,10 @@
     }
   }
 }
+
+// thanks dustin
+.featured-works .article-blurb__left > iframe {
+  aspect-ratio: 16 / 9;
+  min-height: initial;
+  border-radius: 0;
+}
